[gd_scene load_steps=7 format=2]

[ext_resource path="res://DumbButton.gd" type="Script" id=1]
[ext_resource path="res://BackButton.png" type="Texture" id=2]
[ext_resource path="res://PrizeShop/PrizeShop.gd" type="Script" id=3]
[ext_resource path="res://PrizeShop/daikon_plush.png" type="Texture" id=4]
[ext_resource path="res://PrizeShop/sticky_hand.png" type="Texture" id=5]
[ext_resource path="res://MainMenu/RBeer_left_colour.png" type="Texture" id=6]

[node name="PrizeShop" type="Node2D"]
script = ExtResource( 3 )

[node name="Back" type="Area2D" parent="."]
position = Vector2( 150, 83 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Back"]
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Back"]
polygon = PoolVector2Array( -58, 64, -17, 60, 123, 28, 122, -24, 102, -67, 10, -60, -56, -32, -128, 9, -101, 43 )

[node name="DaikonPlush" type="Sprite" parent="."]
position = Vector2( 1067, 719 )
texture = ExtResource( 4 )

[node name="StickyHand" type="Sprite" parent="."]
position = Vector2( 1470, 217 )
texture = ExtResource( 5 )

[node name="RBeerLeftColour" type="Sprite" parent="."]
position = Vector2( 368, 498 )
texture = ExtResource( 6 )

[connection signal="input_event" from="Back" to="Back" method="_on_input_event"]
[connection signal="mouse_entered" from="Back" to="Back" method="_on_hover_start"]
[connection signal="mouse_exited" from="Back" to="Back" method="_on_hover_end"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
